Resumen de la partida terminada, mostramos en PL

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -72,6 +72,9 @@
 						{{> hall_clarcassone}}					
 						{{> hall_torneo}}
 						{{> usersConnected}}
+
+
+						{{>resumenPartida}}
 					</div>
 				</div>
 			</div>
