seccion de ayuda

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -25,6 +25,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/default.css" >
 	<link rel="stylesheet" type="text/css" href="/css/chat.css">
 	<link rel="stylesheet" type="text/css" href="/css/torneos.css">
+	<link rel="stylesheet" type="text/css" href="/css/aiuto.css">
 	<link rel="stylesheet" type="text/css" href="/css/css-jqueryui/cupertino/jquery-ui-1.10.3.custom.css">
 
 	<script src="/js/sigma.min.js"></script>	
@@ -72,6 +73,7 @@
 						{{> hall_clarcassone}}					
 						{{> hall_torneo}}
 						{{> usersConnected}}
+						{{> ayuda}}
 					</div>
 				</div>
 			</div>
