puesto terminos y condiciones d uso (aunq aun no funciona) y el copyright

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -79,16 +79,17 @@
 			</div>
 		</div>
 
-	</div>
-
 	<!-- BEGIN: Footer -->
 	<div id="footer">
 		<div id="footer-content">
 			<a href="" id="logo-footer">
 				<img src="/images/games_logo/clarkasone.jpg" alt="ISI-Pakistan" />
 			</a>
-			<div>Una descripcion de lo chula que es nuestra pagina, y
+			<div>Una descripción de lo chula que es nuestra página, y
 				quien la hizo(la hizo un erizo).
+				<p></p>
+				<a>Términos y Condiciones de uso</a>
+				&copy BlutBad Gaming 2013-2014
 			</div>
 		</div>
 	</div>
