--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -444,7 +444,7 @@
 	<div style='overflow: auto;  height:200px; width:82%; float:right' class="privatemessages">
 
 			{{# each listaprivatemessages}}
-				<i><font size=-4>({{date}})</font> {{orig}}</i>: {{text}} <br>
+				<i><font size=-4>({{date}})</font> {{orig_id}}</i>: {{texto}} <br>
 			{{/ each}}	
 
 	</div>
