compartir también con fb y g+

--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -408,7 +408,9 @@
 			{{> roomplayerstemp}}
 		</div>
 		<div class="alaputadertop">{{> my-video }} {{> remote-videos }}</div>
+		<span class="fbsharebtn"></span>
 		<span class="tweetbtn"></span>
+		<span class="gsharebtn"></span>
 		<br style="clear:both;"/>
 
 		<div class="alaputaizq"> {{> roomchattemp}} </div>
