--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -81,19 +81,7 @@
 		</div>
 
 	<!-- BEGIN: Footer -->
-	<div id="footer">
-		<div id="footer-content">
-			<a href="" id="logo-footer">
-				<img src="/images/games_logo/clarkasone.jpg" alt="ISI-Pakistan" />
-			</a>
-			<div>Una descripción de lo chula que es nuestra página, y
-				quien la hizo(la hizo un erizo).
-				<p></p>
-				<a>Términos y Condiciones de uso</a>
-				&copy BlutBad Gaming 2013-2014
-			</div>
-		</div>
-	</div>
+	{{> pie}}
 	<!-- END: Footer -->
 
 
