--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -285,7 +285,7 @@
 <template name="gamestemp" >
 	<div id="games">
 		{{# each games}}	
-			<a style ="cursor:pointer;text-decoration:underline;" class="linkgame">{{name}}</a><br>
+			<a style ="cursor:pointer;text-decoration:underline;" class="linkgame" tipo={{name}}>{{name}}</a><br>
 			<IMG  SRC =FotosPeq/{{name}} class="linkgame"><br>
 		{{/ each}}
 	</div>
