Listado de rangos e insignias para cada juego

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -73,7 +73,7 @@
 						{{> hall_clarcassone}}					
 						{{> hall_torneo}}
 						{{> usersConnected}}
-						<!--resumenPartida no habeis añadido los archivos-->
+						{{> resumenPartida}} <!--no habeis añadido los archivos-->
 						{{> ayuda}}
 					</div>
 				</div>
