--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -85,7 +85,7 @@
 </template>
 
 <template name="iconLoginTemp">
-		<img width='50px' height='50px'  src={{avatar}} >
+		<img width='55px' height='55px'  src={{avatar}} >
 </template>
 
 <template name="tabstemp">
@@ -121,7 +121,7 @@
 					<button id="buttonSearch">Buscar</button>
 				</div>
 		</div>
-		<a id="friends" class="escondido" style="cursor:pointer;" >
+		<a id="friends" class="escondido" style="text-decoration:none;cursor:pointer;" >
 			Amigos
 		</a>
 	
@@ -140,7 +140,7 @@
 	<div id="gamesranking">
 		<p>Por juegos:</p>
 		{{# each games}}
-			<a style ="cursor:pointer;text-decoration:underline;" class="linkgameranking">{{name}}</a><br>
+			<a style ="cursor:pointer;text-decoration:none;" class="linkgameranking">{{name}}</a><br>
 		{{/ each}}
 	</div>
 </template>
@@ -153,7 +153,7 @@
 			{{# if gotplayers}}
 				<p>Por usuarios:</p>
 				{{# each players}}
-					<a style ="cursor:pointer;text-decoration:underline;" class="linkplayer">{{username}}</a>
+					<a style ="cursor:pointer;text-decoration:none;" class="linkplayer">{{username}}</a>
 				{{/each}}
 			{{else}}
 				Nadie ha jugado aun
@@ -165,13 +165,13 @@
 <template name="bygamerankingtemp">
 	<div id="bygameranking">
 		{{# if user_not_selected}} 
-			<p><a style ='cursor:pointer;text-decoration:underline;' class='linkback'>atras</a></p>
+			<p><a style ='cursor:pointer;text-decoration:none;' class='linkback'>atras</a></p>
 			{{# if gotplayersgame}}
 				<input type='text' id='formplayergame'/>
 				<button id='btnplayergame'>Buscar</button>
 				<p>Usuarios:</p>
 				{{# each playersgame}}
-					<a style ="cursor:pointer;text-decoration:underline;" class="linkplayergame">{{username}}</a>
+					<a style ="cursor:pointer;text-decoration:none;" class="linkplayergame">{{username}}</a>
 				{{/each}}
 				<p>{{gameranking}}</p>
 				<table>
@@ -184,7 +184,7 @@
 					<tbody>
 						{{# each ranking}}
 							<tr>
-								<td><a style ='cursor:pointer;text-decoration:underline;' class='linkuser'>{{user}}</a></td> <td>{{score}}</td>
+								<td><a style ='cursor:pointer;text-decoration:none;' class='linkuser'>{{user}}</a></td> <td>{{score}}</td>
 							</tr>
 						{{/ each}}
 					</tbody>
@@ -199,7 +199,7 @@
 <template name="byuserrankingtemp">
 	<div id="byuserranking">
 		{{# if game_not_selected}}
-			<p><a style ='cursor:pointer;text-decoration:underline;' class='linkback'>atras</a></p>
+			<p><a style ='cursor:pointer;text-decoration:none;' class='linkback'>atras</a></p>
 			<p>{{playerranking}}</p>
 			<table>
 				<thead>
@@ -211,7 +211,7 @@
 				<tbody>
 					{{# each ranking}}
 						<tr>
-							<td><a style ='cursor:pointer;text-decoration:underline;' class='linkgame'>{{game}}</a></td> <td>{{score}}</td>
+							<td><a style ='cursor:pointer;text-decoration:none;' class='linkedgame'>{{game}}</a></td> <td>{{score}}</td>
 						</tr>
 					{{/ each}}
 				</tbody>
@@ -223,7 +223,7 @@
 <template name="byusergamerankingtemp">
 	<div id="byusergameranking">
 		{{# if user_selected}}
-		<a style ='cursor:pointer;text-decoration:underline;' class='linkback'>atras</a>
+		<a style ='cursor:pointer;text-decoration:none;' class='linkback'>atras</a>
 		<p>{{gameranking.user}} - {{gameranking.name}}</p>
 		<table>
 			<thead>
@@ -284,10 +284,13 @@
 
 <template name="gamestemp" >
 	<div id="games">
-		{{# each games}}	
-			<a style ="cursor:pointer;text-decoration:underline;" class="linkgame" tipo={{name}}>{{name}}</a><br>
-			<IMG  SRC =FotosPeq/{{name}} class="linkgame"><br>
+		{{# each games}}
+			<div style="text-align: center; float: left; width: 33% ; ">	
+				<a style ="cursor:pointer"  class="linkgame" tipo={{name}}>{{name}}</a><br><br>
+				<img  width='150px' height='150px' src=FotosPeq/{{name}} class="linkgame" ><br>
+			</div>
 		{{/ each}}
+		<br style="clear:both;"/>
 	</div>
 
 </template>
@@ -346,7 +349,7 @@
 
 
 <template name="alientemp">
-	<div id="aliencontainer">
+	<div style="margin-left:20%" id="aliencontainer">
 		
 	</div>
 </template>
@@ -406,20 +409,28 @@
 
 <template name="roomgametemp">
 	<div id="roomcontainer">
-		<div class="alaputaizqtop"> 
-			<a style ="cursor:pointer;text-decoration:underline;" id="exitgame"> Salir </a>
-			<h1>{{> gamenametemp}}</h1>  <h2>{{> matchnametemp}}</h2>
+		<div class="alaputaizqtop">
+			<br> 
+			<a style ="cursor:pointer;text-decoration:none;" id="exitgame"> Salir </a>
+			<br><br><br>
 			{{> roomplayerstemp}}
 		</div>
-		<div class="alaputadertop">{{> my-video }} {{> remote-videos }}</div>
-		<span class="fbsharebtn"></span>
-		<span class="tweetbtn"></span>
-		<span class="gsharebtn"></span>
+		<div class="alaputadertop"><h1 class="titulogame">{{> gamenametemp}}</h1>  <h2 class="titulogame">{{> matchnametemp}}</h2></div>
 		<br style="clear:both;"/>
-
 		<div class="alaputaizq"> {{> roomchattemp}} </div>
 		<div class="alaputader">{{> alientemp}} {{> frootwarstemp}} {{> clarcassonnetemp}}</div>
 		<br style="clear:both;"/>
+		<div style="text-align:center">{{> my-video }} {{> remote-videos }}</div>
+		<div style="width:33%;float:left">
+			<span class="fbsharebtn"></span>			
+		</div>
+		<div style="width:33%;float:left">
+			<span  class="tweetbtn"></span>				
+		</div>	
+		<div style="width:33%;float:left">
+			<span  class="gsharebtn"></span>				
+		</div>
+		<br style="clear:both;"/>	
 	</div>
 </template>
 
@@ -456,7 +467,7 @@
 	<div id="listaAmigosOnline">
 		{{# each listaAmigosOnline}}
 			<img width='20px' height='20px'  src={{avatar}} style ="float:left;margin-left:0px">
-			<a style ="cursor:pointer;text-decoration:underline;float:left;" class="linkchat">
+			<a style ="cursor:pointer;text-decoration:none;float:left;" class="linkchat">
 				{{username}}<br>
 			</a>
 			<ul class="menuAmigos" style="float:left;">
