--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -474,9 +474,9 @@
 				<li>
 					<a class ="menuAmigosStyle">&#9660;</a>
 					<ul>
-						<li><a class ="menuAmigosStyle menuAInv" hreflang={{username}}><span class="ui-icon-plus"></span>Invitar</a></li>
-						<li><a class ="menuAmigosStyle menuAPer" hreflang={{username}}><span class="ui-icon-person"></span>Perfil</a></li>
-						<li><a class ="menuAmigosStyle menuABloq" hreflang={{username}}><span class="ui-icon-cancel"></span>Bloquear</a></li>
+						<li><a class ="menuAmigosStyle menuAInv" hreflang={{_id}}><span class="ui-icon-plus"></span>Invitar</a></li>
+						<li><a class ="menuAmigosStyle menuAPer" hreflang={{_id}}><span class="ui-icon-person"></span>Perfil</a></li>
+						<li><a class ="menuAmigosStyle menuABloq" hreflang={{_id}}><span class="ui-icon-cancel"></span>Bloquear</a></li>
 					</ul>
 				</li>
 			</ul>
