--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -291,7 +291,7 @@
 <template name="gamestemp" >
 	<div id="games">
 		{{# each games}}
-			<div style="text-align: center; float: left; width: 33% ; ">	
+			<div style="text-align: center; float: left; width: 25% ; ">	
 				<a style ="cursor:pointer"  class="linkgame" tipo={{name}}>{{name}}</a><br><br>
 				<img  width='150px' height='150px' src=FotosPeq/{{name}} class="linkgame" ><br>
 			</div>
@@ -360,6 +360,12 @@
 	</div>
 </template>
 
+<template name="herotemp">
+	<div style="margin-left:20%" id="theherocontainer">
+		
+	</div>
+</template>
+
 
 <template name="frootwarstemp">
 	<div id="frootwarscontainer">
@@ -424,7 +430,7 @@
 		<div class="alaputadertop"><h1 class="titulogame">{{> gamenametemp}}</h1>  <h2 class="titulogame">{{> matchnametemp}}</h2></div>
 		<br style="clear:both;"/>
 		<div class="alaputaizq"> {{> roomchattemp}} </div>
-		<div class="alaputader">{{> alientemp}} {{> frootwarstemp}} {{> clarcassonnetemp}}</div>
+		<div class="alaputader">{{> alientemp}} {{> frootwarstemp}} {{> clarcassonnetemp}} {{> herotemp}}</div>
 		<br style="clear:both;"/>
 		<div style="text-align:center">{{> my-video }} {{> remote-videos }}</div>
 		<div style="width:33%;float:left">
